src/pagoda/snapshots/todaiji__pagoda__parser__tests__parses_string_assignment.snap
---
source: src/pagoda/parser.rs
expression: program.stmts
---
[
    Block {
        stmts: [
            Let {
                name: "x",
                ty: None,
                expr: StringLiteral {
                    value: "hi",
                    span: Span {
                        start: 10,
                        end: 14,
                        literal: "\"hi\"",
                    },
                },
                span: Span {
                    start: 2,
                    end: 14,
                    literal: "let x = \"hi\"",
                },
            },
            Expr {
                expr: Var {
                    name: "x",
                    span: Span {
                        start: 16,
                        end: 17,
                        literal: "x",
                    },
                },
                span: Span {
                    start: 16,
                    end: 17,
                    literal: "x",
                },
            },
        ],
        span: Span {
            start: 0,
            end: 19,
            literal: "{x}",
        },
    },
]
