src/pagoda/snapshots/todaiji__pagoda__parser__tests__parses_string_literal.snap
---
source: src/pagoda/parser.rs
expression: program
---
Program {
    imports: [],
    structs: [],
    enums: [],
    functions: [],
    stmts: [
        Block {
            stmts: [
                Expr {
                    expr: StringLiteral {
                        value: "hi",
                        span: Span {
                            start: 1,
                            end: 5,
                            literal: "\"hi\"",
                        },
                    },
                    span: Span {
                        start: 1,
                        end: 5,
                        literal: "\"hi\"",
                    },
                },
            ],
            span: Span {
                start: 0,
                end: 6,
                literal: "{\"hi\"}",
            },
        },
    ],
    span: Span {
        start: 0,
        end: 6,
        literal: "",
    },
}
