src/pagoda/snapshots/todaiji__pagoda__parser__tests__parses_struct_definition.snap
---
source: src/pagoda/parser.rs
expression: program
---
Program {
    imports: [],
    structs: [
        StructDef {
            is_public: false,
            name: "Point",
            fields: [
                StructField {
                    name: "x",
                    ty: "i64",
                    span: Span {
                        start: 15,
                        end: 21,
                        literal: "",
                    },
                },
                StructField {
                    name: "y",
                    ty: "i64",
                    span: Span {
                        start: 23,
                        end: 29,
                        literal: "",
                    },
                },
            ],
            is_tuple_struct: false,
            span: Span {
                start: 0,
                end: 31,
                literal: "",
            },
        },
    ],
    enums: [],
    functions: [],
    stmts: [],
    span: Span {
        start: 0,
        end: 31,
        literal: "",
    },
}
