src/pagoda/snapshots/todaiji__pagoda__parser__tests__parses_typed_let_statement.snap
---
source: src/pagoda/parser.rs
expression: program.stmts
---
[
    Block {
        stmts: [
            Let {
                name: "x",
                ty: Some(
                    "i32",
                ),
                expr: Binary {
                    op: Add,
                    left: IntLiteral {
                        value: 1,
                        span: Span {
                            start: 14,
                            end: 15,
                            literal: "1",
                        },
                    },
                    right: IntLiteral {
                        value: 2,
                        span: Span {
                            start: 16,
                            end: 17,
                            literal: "2",
                        },
                    },
                    span: Span {
                        start: 14,
                        end: 17,
                        literal: "1+2",
                    },
                },
                span: Span {
                    start: 1,
                    end: 17,
                    literal: "let x:i32 = 1+2",
                },
            },
            Expr {
                expr: Var {
                    name: "x",
                    span: Span {
                        start: 19,
                        end: 20,
                        literal: "x",
                    },
                },
                span: Span {
                    start: 19,
                    end: 20,
                    literal: "x",
                },
            },
        ],
        span: Span {
            start: 0,
            end: 21,
            literal: "{x}",
        },
    },
]
