src/pagoda/snapshots/todaiji__pagoda__parser__tests__parses_without_semicolon.snap
---
source: src/pagoda/parser.rs
expression: program
---
Program {
    structs: [],
    functions: [],
    stmts: [
        Block {
            stmts: [
                Expr {
                    expr: IntLiteral {
                        value: 1,
                        span: Span {
                            start: 1,
                            end: 2,
                            literal: "1",
                        },
                    },
                    span: Span {
                        start: 1,
                        end: 2,
                        literal: "1",
                    },
                },
                Expr {
                    expr: IntLiteral {
                        value: 2,
                        span: Span {
                            start: 3,
                            end: 4,
                            literal: "2",
                        },
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        literal: "2",
                    },
                },
            ],
            span: Span {
                start: 0,
                end: 5,
                literal: "{2}",
            },
        },
    ],
    span: Span {
        start: 0,
        end: 5,
        literal: "",
    },
}
